first refacotring